--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   },
   "dependencies": {
     "antd": "^5.16.1",
+    "axios": "^1.6.8",
+    "lodash": "^4.17.21",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
